[gd_scene load_steps=8 format=3 uid="uid://cspsgw2i5vlvr"]

[ext_resource type="Theme" uid="uid://c36ywjvt5x7kl" path="res://Assets/GuiThemes/MainTheme.tres" id="1_u17pf"]
[ext_resource type="Script" path="res://Frames/EmailPrompt/email_prompt.gd" id="1_uurw1"]
[ext_resource type="Shader" path="res://Frames/World/Blur.gdshader" id="2_yxgbd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yvwtn"]
shader = ExtResource("2_yxgbd")
shader_parameter/blur_type = 0
shader_parameter/blur_amount = 18
shader_parameter/blur_radius = 1.0
shader_parameter/blur_direction = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_ddg3i"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_klcw2"]
resource_name = "ani"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_864xi"]
_data = {
"RESET": SubResource("Animation_ddg3i"),
"ani": SubResource("Animation_klcw2")
}

[node name="EmailPrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uurw1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_yvwtn")
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
color = Color(0, 0, 0, 0.454902)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
color = Color(0, 0, 0, 0.388235)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -82.5
offset_right = 151.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(151, 82.5)
theme = ExtResource("1_u17pf")

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -28.0
offset_right = 112.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u17pf")
placeholder_text = "Enter an E-Mail"
alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 31.5
offset_right = 264.0
offset_bottom = 54.5
theme = ExtResource("1_u17pf")
text = "Provide an E-Mail"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 90.5
offset_right = 292.0
offset_bottom = 113.5
theme = ExtResource("1_u17pf")
theme_override_colors/font_color = Color(1, 1, 1, 0.282353)
text = "essential for support & updates"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirm" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 205.0
offset_top = 125.5
offset_right = 294.0
offset_bottom = 155.5
theme = ExtResource("1_u17pf")
disabled = true
text = "Confirm"

[node name="Reject" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 125.5
offset_right = 97.0
offset_bottom = 155.5
theme = ExtResource("1_u17pf")
text = "Reject"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_864xi")
}

[connection signal="pressed" from="Panel/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Panel/Reject" to="." method="_on_reject_pressed"]
